# llm-experiments

./: .gitignore  README.md
notebooks/: arize_jsonl.py  bootstrap_accuracy.ipynb  browser_gym.sh  cloud_openai.py  deepteam_redteaming.ipynb  examples.json  webpages.csv
notebooks/agents/: adk_tutorial.ipynb
notebooks/bootstrap/: bootstrap_ir_rag_reference_based.ipynb
notebooks/gui_agent/: mvp.py
notebooks/gui_agent/adk_mvp/: .env.example  Claude.md  ENTERPRISE_TESTS_SUMMARY.md  README.md  __init__.py  main.py  pyproject.toml
notebooks/gui_agent/adk_mvp/evaluations/: crm_tests.evalset.json  dashboard_tests.evalset.json
notebooks/gui_agent/adk_mvp/mvp_v1/: agent.py  run.py
notebooks/gui_agent/adk_mvp/tests/: __init__.py  conftest.py  test_behavioral.py  test_setup.py  test_tools.py
notebooks/gui_agent/adk_mvp/tests/behavioral_enterprise/: README.md  test_crm_lead_entry.py  test_dashboard_monitoring.py
notebooks/gui_agent/adk_mvp/tests/behavioral_enterprise/mocks/: mock_crm.html  mock_dashboard.html
notebooks/human-evaluation/: README.md  analyze.py
notebooks/loadtest/: openai_compatible_endpoint_v1.ipynb  openai_compatible_endpoint_v2.ipynb  scenario-notebook.py  scenarios.py  test.py
notebooks/prompt_sensitivity/: claude.ipynb  prompt_sensitivity_experiment.ipynb  summary.md
notebooks/redteaming/: advanced_gemini_multiturn.ipynb  gemini_multiturn.ipynb  gemini_redteaming.py  gemini_singleturn.ipynb  multiturn.ipynb
notebooks/retrieval/: synthetic_ir_hitrate.ipynb
notebooks/structured_data/: outlines_transformers.ipynb
(+19 files in other folders)
