[project]
name = "adk-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.23.0",
    "mcp>=1.25.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "enterprise: Enterprise behavioral tests (requires mock services, longer execution)",
    "crm: CRM-specific behavioral tests",
    "dashboard: Dashboard monitoring behavioral tests",
]
